Changes with melon 1.5.10                                         08 Dec 2016
    *) Fixed bugs of parser generator.
    *) Added an interface for thread pool.
    *) Added a new component of AST.

Changes with melon 1.5.9                                          18 Nov 2016
    *) Optimized lex component.
    *) Fixed bugs of parser generator.

Changes with melon 1.5.8                                          06 Nov 2016
    *) Added thread pool component.
    *) Updated shell script 'configure'.

Changes with melon 1.5.7                                          27 Oct 2016
    *) Added a parameter for script 'configure' to specify
       the target binary file name.
    *) Updated log component to support logging type 'mln_string_t'.
    *) Fixed a mistake in parser generator component.

Changes with melon 1.5.6                                          23 Oct 2016
    *) Updated lex component, support preprocessing.
    *) Updated parser generator.
    *) Updated configuration component to support preprocessing.
    *) Updated stack component.
    *) Updated misc tool functions.

Changes with melon 1.5.5                                          15 Oct 2016
    *) Fixed an error of ASN.1.

Changes with melon 1.5.4                                          15 Sep 2016
    *) Added ASN.1 component.
    *) Updated RSA component.
    *) Updated Tool component.
    *) Updated Log component.
    *) Fixed a bug of parsing timestamp.
    *) Updated Hash component.
    *) Updated Fork component.
    *) Fixed macro names in Parser generator component.
    *) Updated String component and relevant components.
    *) Updated Event component.
    *) Updated Bignum component.
    *) Modified Chain component.
    *) Modified Connection component.
    *) Optimized Conf component.
    *) Optimized File cache component.
    *) Optimized Thread component.
    *) Optimized Parser generator component.

Changes with melon 1.5.3                                          28 Jun 2016