@@ -344,7 +344,6 @@ struct mln_lang_spec_s {
         mln_lang_factor_t       *factor;
         mln_lang_spec_t         *spec;
         mln_lang_funccall_t     *func;
-        mln_string_t            *name;
     } data;
 };
 
